[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytome"
version = "0.0.0"
description = "Potion crafting recipe and customer query app."
requires-python = ">=3.10"
dependencies = [
    "openpyxl",
    "openpyxl-image-loader",
    "pillow",
    "PyQt6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pytome = ["data/**/*"]
